tests/sumo/errors/routes/invalid_departpos/errors.sumo.agg
Warning: 1 total messages of type: Invalid departPos % given for vehicle '%'. Inserting at lane end instead.
